# 2022-FunPalettes

./: CMakeLists.txt  Dockerfile  README.md  aco_palette_sort.cpp  aco_palette_sort.h  camera.cpp  camera.h  color_point.cpp  color_point.h  context.cpp  context.h  d2array.hpp  data_type.cpp  data_type.h  imgui.ini  main.cpp  palette_interpolate.cpp  palette_interpolate.h  palette_loader.cpp  palette_loader.h  palette_sort.cpp  palette_sort.h
.github/workflows/: cmake.yml
imgui/: CMakeLists.txt
imgui/backends/: imgui_impl_sdl.cpp
resources/: input_palette.txt  output_palette.txt  tmp.txt
web_version/: index.html  index.js  style.css
